--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <p>훈기와 현주의 모바일 청첩장</p>
+    </div>
 
     <div class="container"></div>
 
