--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <p>훈기와 현주의 모바일 청첩장</p>
+        <img src="./img/image1.jpeg" style="max-width: 100%; height: auto;">
     </div>
 
     <div class="container"></div>
