--- a/index.html
+++ b/index.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>daydreamplace</title>
+    <title>훈기와 현주의 모바일 청첩장</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f2f2f2;
+        }
 
-    <link rel="stylesheet" href="style.css">
+        .gallery {
+            max-width: 800px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .image-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <div class="header">
-        <p>훈기와 현주의 모바일 청첩장</p>
-        <img src="./img/image1.jpeg" style="max-width: 100%; height: auto;">
+    <div class="gallery">
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 1">
+        </div>
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 2">
+        </div>
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 3">
+        </div>
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 4">
+        </div>
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 5">
+        </div>
+        <div class="image-container">
+            <img src="img/image1.jpeg" alt="Image 6">
+        </div>
     </div>
-
-    <div class="container"></div>
-
-    <div class="footer"></div>
 </body>
 </html>
