--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         });
         
     </script>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pcrt3wheto"></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId="></script>
 
 </head>
 
