--- a/index.html
+++ b/index.html
@@ -1,273 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>이미지 갤러리</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100%;
-            background-color: #f2f2f2;
-        }
-
-        @media (max-width: 600px) {
-            .gallery {
-                width: 100%;
-            }
-            .image-grid-container {
-                width: 100%;
-            }
-            .map-container {
-                width: 100%;
-            }
-        }
-
-        @media (min-width: 600px) {
-            .gallery {
-                width: 600px;
-            }
-            .image-grid-container {
-                width: 600px;
-            }
-            .map-container {
-                width: 600px;
-            }
-        }
-
-        .gallery {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .image-grid-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-        .map-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            aspect-ratio: 2;
-        }
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
-        }
-
-        .image-grid img {
-            width: 100%;
-            object-fit: cover;
-            aspect-ratio: 1;
-            border-radius: 10px;
-        }
-
-        .image-container {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .image-container-selectable img {
-            max-width: 100%;
-            height: auto;
-            cursor: pointer;
-        }
-
-        .popup-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 0.3s ease;
-        }
-
-        .popup-container.show {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        .popup-image {
-            max-width: 90%;
-            max-height: 90%;
-            object-fit: contain;
-        }
-
-        .popup-nav {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            z-index: 10000;
-        }
-
-        .popup-nav button {
-            background: none;
-            border: none;
-            color: #fff;
-            font-size: 36px;
-            cursor: pointer;
-            padding: 10px;
-            outline: none;
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const imageContainers = document.querySelectorAll('.image-container-selectable');
-            const popupContainer = document.querySelector('.popup-container');
-            const popupImage = document.querySelector('.popup-image');
-            const prevButton = document.querySelector('.popup-nav .prev');
-            const nextButton = document.querySelector('.popup-nav .next');
-
-            let currentIndex = 0;
-
-            // 이미지 클릭 시 팝업 열기
-            imageContainers.forEach(function (container, index) {
-                container.addEventListener('click', function () {
-                    currentIndex = index;
-                    showPopup();
-                });
-            });
-
-            // 팝업 닫기
-            popupContainer.addEventListener('click', function () {
-                hidePopup();
-            });
-
-            // 이전 이미지 버튼 클릭 시
-            prevButton.addEventListener('click', function (event) {
-                event.stopPropagation();
-                prevImage();
-            });
-
-            // 다음 이미지 버튼 클릭 시
-            nextButton.addEventListener('click', function (event) {
-                event.stopPropagation();
-                nextImage();
-            });
-
-            // 팝업 보이기
-            function showPopup() {
-                popupContainer.classList.add('show');
-                popupImage.src = imageContainers[currentIndex].querySelector('img').src;
-            }
-
-            // 팝업 숨기기
-            function hidePopup() {
-                popupContainer.classList.remove('show');
-            }
-
-            // 다음 이미지 보기
-            function nextImage() {
-                currentIndex = (currentIndex + 1) % imageContainers.length;
-                popupImage.src = imageContainers[currentIndex].querySelector('img').src;
-            }
-
-            // 이전 이미지 보기
-            function prevImage() {
-                currentIndex = (currentIndex - 1 + imageContainers.length) % imageContainers.length;
-                popupImage.src = imageContainers[currentIndex].querySelector('img').src;
-            }
-        });
-        
-    </script>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId="></script>
-
-</head>
-
-<body>
-    <div class="gallery">
-        <div class="image-container">
-            <img loading="lazy" src="./img/background1.png" alt="Image 1">
-        </div>
-        <div class="image-container">
-            <img loading="lazy" src="./img/background2.png" alt="Image 2">
-        </div>
-        <div class="image-container">
-            <img loading="lazy" src="./img/background3.png" alt="Image 3">
-        </div>
-        <div class="image-container">
-            <img loading="lazy" src="./img/background4.png" alt="Image 4">
-        </div>
-        <div class="image-container">
-            <img loading="lazy" src="./img/background5.png" alt="Image 5">
-        </div>
-        <div class="image-container">
-            <img loading="lazy" src="./img/background6.png" alt="Image 6">
-        </div>
-    </div>
-    <div class="image-grid-container">
-        <div class="image-grid">
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/image1.jpeg" alt="Image 1">
-            </div>
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/image2.jpeg" alt="Image 2">
-            </div>
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/background3.png" alt="Image 3">
-            </div>
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/background4.png" alt="Image 4">
-            </div>
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/background5.png" alt="Image 5">
-            </div>
-            <div class="image-container-selectable">
-                <img loading="lazy" src="./img/background6.png" alt="Image 6">
-            </div>
-
-        </div>
-    </div>
-    <div class="popup-container">
-        <div class="popup-nav">
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
-        </div>
-        <img class="popup-image" src="" alt="Popup Image">
-    </div>
-    <div class="map-container">
-        <div id="map" style="width:100%;height:100%;"></div>
-    </div>
-
-    <script>
-        var position = new naver.maps.LatLng(37.5407309, 127.0714632);
-        var mapOptions = {
-            center: position,
-            zoom: 17
-        };
-        var map = new naver.maps.Map('map', mapOptions);
-        var marker = new naver.maps.Marker({
-            position: position,
-            map: map
-        });
-        </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta property="og:site_name" content="Myblog"/><link rel="canonical" href="https://your-website-url.com"/><meta name="twitter:url" content="https://your-website-url.com"/><meta property="og:url" content="https://your-website-url.com"/><title>Welcome to Myblog! | Myblog</title><meta name="twitter:title" content="Welcome to Myblog! | Myblog"/><meta property="og:title" content="Welcome to Myblog! | Myblog"/><meta name="description" content="A description of Myblog"/><meta name="twitter:description" content="A description of Myblog"/><meta property="og:description" content="A description of Myblog"/><meta name="twitter:card" content="summary"/><link rel="stylesheet" href="/styles.css" type="text/css"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><link rel="shortcut icon" href="/images/favicon.png" type="image/png"/><link rel="alternate" href="/feed.rss" type="application/rss+xml" title="Subscribe to Myblog"/></head><body><header><div class="wrapper"><a href="/" class="site-name">Myblog</a></div></header><div class="wrapper"><h1>Welcome to Myblog!</h1><p class="description">A description of Myblog</p><h2>Latest content</h2><ul class="item-list"><li><article><h1><a href="/posts/first-post">My first post</a></h1><ul class="tag-list"><li><a href="/tags/first">first</a></li><li><a href="/tags/article">article</a></li></ul><p>A description of my first post.</p></article></li></ul></div><footer><p>Generated using <a href="https://github.com/johnsundell/publish">Publish</a></p><p><a href="/feed.rss">RSS feed</a></p></footer></body></html>
